# migration

./: README.md  main.py  pyproject.toml
migration/: __init__.py  cli.py  pipeline.py
tests/: test_pipeline.py
